--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "* Одностраничный сайт, на котором в дальнейшем каждый пользователь смотжет добавить себя, или не сможет, а так же сможет добавить те места где он побывал приложив фоотграфию, а так же указав своё имя и указав краткое описание\\увлечение\\профессию\r * Картинки были оптимизированны на https://tinypng.com/\r * Используемые языки CSS, HTML, JS\r * Используется адаптивная верстка, часть элементов тянется резиново, чтобы не было резких скачков между разрешениями, а так же, чтобы не добавлять медиа-скрины.\r * Используется валидация полей.\r * JS код построен на классах. в том числе используется мягкое связывание.\r * Проект подготовлен к сборке вебпаком, с выполнением оптимизации и минимизации кода.",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "webpack --mode production",
     "dev": "webpack serve"
   },
@@ -25,6 +27,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.4",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss-loader": "^6.2.1",
